# Pictovap

./: .cv_cache.json  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-hooks.yaml  AI_COORDINATION.md  API_STABILITY.md  CHANGELOG.md  CLAUDE.md  CMA_URUN_600x600_PROJECT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPOSITPHOTOS_API_WORKFLOW.md  DEVELOPMENT_ASSISTANTS.md  LICENSE  MEMORY.md  Makefile  NEXT_STEPS.md  QWEN_STATUS.md  README.md  README.med  README_CURRENT_SESSION.md  RUNTIME.md  SECURITY.md  SEO_DIRECTIVES.md  SESSION_SUMMARY.md  SONNET_ARCHITECT_BRIEF.md  SONNET_ARCHITECT_FINAL.md  SONNET_FINAL_BRIEF_v2.md  STATUS.md  USER_INSTRUCTIONS.md  YO_UPLOAD_SYSTEM.md  action.yml  cma_batch_export.py  cma_batch_manifest.csv  cma_square_export.py  deep_verify_image_state.py  distribute_post_images.py  download_licensed_deposit_assets.py  (+49 more)
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_request.md  bug_report.md  external_validation.md  feature_request.md
.github/workflows/: adoption-metrics.yml  ci.yml  codeql.yml  criticality.yml  dependency-review.yml  publish.yml  scorecard.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  DEVELOPER.md  README.md  ROADMAP.md  adoption-playbook.md  architecture.md  case-study-yoldaolmak.md  claude-for-oss-readiness.md  cms-placement.md  external-tester-message.md  external-tester-note.md  fit-score.md  framework.md  github-issue-plan.md  installation.md  open-source-readiness.md  provenance-pack.md  publisher-profiles.md  quickstart.md  release-checklist.md  repository-metadata.md  usage.md  visual-brief.md
docs/adapters/: cms-adapters.md  image-sources.md  overview.md
docs/architecture/: engine-modules.md  naming.md  native-vs-legacy.md  overview.md
docs/case-studies/: yoldaolmak.md
docs/concepts/: cms-placement.md  fit-score.md  overview.md  pipeline.md  provenance-pack.md  semantic-selection.md  sources.md  visual-brief.md  visual-memory.md
docs/contributing/: adapter-sprint.md  adapters.md  first-adapter-pr.md  good-first-issues.md  issue_templates.md  plugins.md  starter-issues.md  wordpress-gutenberg-minisprint.md
docs/guides/: adding-sources.md  editor-report.md  image-sources.md  installation.md  mac-photos-setup.md  publisher-profile.md  quickstart.md  using-pictovap.md  wordpress-setup.md
docs/issues/: 01-openverse-adapter.md  02-try-your-own-article-feedback.md  03-ghost-cms-adapter-discussion.md  04-license-confidence-mapping.md  05-external-publisher-profile.md
docs/ops/: indexing.md  monitoring.md  runbook.md
docs/reference/: cli.md  configuration.md  http-api.md  profiles.md  publisher-profiles.md
docs/release-notes/: github-release-v0.2.0.md  v0.2.0.md  v0.7.10.md  v0.7.11.md  v0.7.12.md  v0.7.6.md  v0.7.7.md  v0.7.8.md  v0.7.9.md
docs/tutorials/: wordpress-automation.md
examples/: content_generation_integration.py  depositphotos_workflow.py  index_rome_mac_photos.py  roma_gezi_rehberi_visual_plan.md  roma_mac_photos_curation.json  sample-output.json  sample-report.md
examples/adapters/: README.md  custom_cms_adapter.py  custom_image_source.py
examples/adapters/pictovap-hugo/: CONTRIBUTING.md  README.md  pyproject.toml
examples/adapters/pictovap-hugo/src/pictovap_hugo/: __init__.py
examples/adapters/pictovap-hugo/tests/: test_adapter.py
examples/adapters/pictovap-pixabay/: CONTRIBUTING.md  README.md  pyproject.toml
examples/adapters/pictovap-pixabay/src/pictovap_pixabay/: __init__.py
examples/adapters/pictovap-pixabay/tests/: test_adapter.py
examples/adapters/pictovap-wikimedia/: CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
examples/adapters/pictovap-wikimedia/src/pictovap_wikimedia/: __init__.py
examples/adapters/pictovap-wikimedia/tests/: test_adapter.py
examples/articles/: local-guide.md  recipe-post.md  travel-guide.md
examples/assets/: README.md
examples/external-renderer-package/: README.md  pyproject.toml
examples/external-renderer-package/src/pictovap_external_html_review/: __init__.py
examples/external-renderer-package/tests/: test_renderer.py
examples/outputs/: local-guide-output.json  recipe-post-output.json  travel-guide-output.json
examples/profiles/: ecommerce-publisher.yaml  news-publisher.yaml  sample-publisher.yaml  yoldaolmak.py
ops/: download_licensed_deposit_assets.py  index_memory_daily.py  index_vil.py  repair_image_placement.py  repair_turkish_media_meta.py  run_deposit.py  yoos_vil_health.py
scripts/: auto_scan_loop.sh  backfill_apple_labels.py  build_destination_index.py  check_docs_links.py  com.pictova.server.plist  coverage_report.py  download_licensed_deposit_assets.py  fast_scan.py  index_country_photos.py  index_memory_daily.py  index_turkey_photos.py  index_vil.py  rebuild_fts.py  repair_image_placement.py  repair_turkish_media_meta.py  run_deposit.py  vision_scan_batch.py  yoos_vil_health.py
src/: main.py
src/core/: media_publish.py  media_quality.py  metadata_generator.py  processor.py  yo_advanced_filter.py  yo_clip_tagger.py  yo_cloud_vision.py  yo_face_detector.py  yo_full_tagger_pipeline.py  yo_gutenberg_blocks.py  yo_image_processor.py  yo_iphoto.py  yo_metadata_generator.py  yo_orchestrator.py  yo_phase1_quick_tagger.py  yo_process.py  yo_quality_comparison.py  yo_semantic_search.py  yo_tag_taxonomy.py  yo_unsplash.py  yo_vision_daily_scan.py  yo_wp_draft_image_cycle.py  yo_wp_uploader.py  yo_yoldaolmak_filter.py
src/pictova/: __init__.py  config.py  demo.py  main.py  vision_templates.py
src/pictovap/: __init__.py  api.py  conformance.py  demo.py  feedback.py  plugins.py  renderers.py  scaffold.py  vision_templates.py
src/services/: post_media_guard.py  wordpress.py
src/utils/: deep_verify_image_state.py  distribute_post_images.py  fix_wp_block_comment_boundaries.py  remove_nonhierarchical_images.py  verify_image_repairs.py
src/vil/: __init__.py
src/visual_memory/: __init__.py  analyzer.py  db.py  deposit_config.py  enrich.py  models.py  sources.py
tests/fixtures/: turkish-coffee-article.md
tests/integration/: test_cli_contract.py
(+123 files in other folders)
