[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pictovap"
version = "0.3.0"
description = "Open-source visual finishing engine for content publishers."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Pictovap Contributors", email = "hello@yoldaolmak.com"}
]
keywords = [
    "wordpress", "cms", "image automation", "seo", "accessibility",
    "alt text", "llm", "vision", "computer vision", "openverse", "unsplash",
    "ghost", "strapi", "static site", "content publishing", "provenance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Pillow>=9.0.0",
    "requests>=2.25.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
providers = [
    "anthropic>=0.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/yoldaolmak/Pictovap"
Documentation = "https://github.com/yoldaolmak/Pictovap/blob/main/docs/README.md"
Repository = "https://github.com/yoldaolmak/Pictovap.git"
Issues = "https://github.com/yoldaolmak/Pictovap/issues"
Changelog = "https://github.com/yoldaolmak/Pictovap/blob/main/CHANGELOG.md"

[project.scripts]
pictova = "pictovap.app.cli:main"
pictovap = "pictovap.app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"pictovap.data" = ["*.md"]
