[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pictovap"
version = "0.7.9"
description = "Image workflow for content publishers who spend hours finding free images and placing them in articles."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Pictovap Contributors", email = "hello@yoldaolmak.com"}
]
keywords = [
    "content publishing", "content editor", "image search", "image sourcing",
    "image placement", "image upload", "free stock images", "free stock photos",
    "find images for blog posts", "blog post images", "stock photos",
    "wordpress", "gutenberg", "wordpress media library", "wordpress image upload",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Pillow>=12.3.0",
    "PyYAML>=6.0.2",
    "requests>=2.33.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
]
lint = [
    "flake8>=7.3.0",
]
typecheck = [
    "pyright>=1.1.411",
]

[project.urls]
Homepage = "https://github.com/yoldaolmak/Pictovap"
Documentation = "https://github.com/yoldaolmak/Pictovap/blob/main/docs/README.md"
Repository = "https://github.com/yoldaolmak/Pictovap.git"
Issues = "https://github.com/yoldaolmak/Pictovap/issues"
Changelog = "https://github.com/yoldaolmak/Pictovap/blob/main/CHANGELOG.md"

[project.scripts]
pictova = "pictovap.app.cli:main"
pictovap = "pictovap.app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"pictovap.data" = ["*.md"]
"pictovap.schemas" = ["*.json"]
