[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pictovap-external-html-review"
version = "0.1.0"
description = "Standalone HTML review renderer plugin for Pictovap."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["pictovap>=0.7.5"]

[project.urls]
Homepage = "https://github.com/yoldaolmak/Pictovap/tree/main/examples/external-renderer-package"
Repository = "https://github.com/yoldaolmak/Pictovap"
Issues = "https://github.com/yoldaolmak/Pictovap/issues"

[project.entry-points."pictovap.report_renderers"]
external-html-review = "pictovap_external_html_review:ExternalHTMLReviewRenderer"

[project.optional-dependencies]
test = ["pytest>=9.0.3"]

[tool.setuptools.packages.find]
where = ["src"]
