[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pictovap-hugo"
version = "0.1.0"
description = "Hugo CMS adapter example for Pictovap."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["pictovap", "cms adapter", "hugo", "static site"]
dependencies = ["pictovap>=0.7.8"]

[project.urls]
Homepage = "https://github.com/yoldaolmak/Pictovap/tree/main/examples/adapters/pictovap-hugo"
Repository = "https://github.com/yoldaolmak/Pictovap"
Issues = "https://github.com/yoldaolmak/Pictovap/issues/6"

[project.entry-points."pictovap.cms"]
hugo = "pictovap_hugo:HugoAdapter"

[project.optional-dependencies]
test = ["pytest>=9.0.3"]

[tool.setuptools.packages.find]
where = ["src"]
