[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pictovap-pixabay"
version = "0.1.0"
description = "Pixabay image-source adapter for Pictovap."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["pictovap", "image adapter", "cms"]
dependencies = ["pictovap>=0.7.8"]

[project.urls]
Homepage = "https://github.com/yoldaolmak/Pictovap/tree/main/examples/adapters/pictovap-pixabay"
Repository = "https://github.com/yoldaolmak/Pictovap"
Issues = "https://github.com/yoldaolmak/Pictovap/issues/1"

[project.entry-points."pictovap.image_sources"]
pixabay = "pictovap_pixabay:PixabaySource"

[project.optional-dependencies]
test = ["pytest>=9.0.3"]

[tool.setuptools.packages.find]
where = ["src"]
